@@ -1,6 +1,7 @@
 r128:
 New   : lz4 cli sparse file support
 New   : command -m, to compress multiple files in a single command
+New   : lz4frame supports frame content size
 Fixed : Restored lz4hc compression ratio (was slightly lower since r124)
 New   : lz4frame supports skippable frames
 Changed:Default "make install" directory is /usr/local
